# gluco-insights-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
examples/: env_readines_check.py
src/: GlucoApp.py
src/conf/: glucose_measure_pipeline.conf
src/pipeline/: SimplePipeline.py
tests/data/inbound/glucose/abbort/: Jyothish_Kp_glucose_28-9-2021.csv
