[tool.poetry]
name = "gluco-insights"
version = "1.0.0"
description = "A simple PySpark based analytical tool to find insights from Blood Glucose data."
authors = ["Jyothish KP <kp.jyothish@gmail.com>"]
license = "MIT"
packages = [
    { include = "*" , from="src"},
]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "2.4.8"
quinn = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
