[metadata]
name = gluco-insights
version = 1.0.0
license = apache
description = Simple Spark analytical 
long_description = file: README.rst
author = Jyothis
author_email = jyothish@gmail.com
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'License :: Apache License',
        'Operating System :: Unix',
        'Operating System :: POSIX',
        'Operating System :: Microsoft :: Windows',
        'Programming Language :: Python',
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8'

]
  
project_urls={}

[options]
packages = find:
package_dir =src
include_package_data = True
install_requires =[]
  
[options.packages.find]
where=src
